Refactor file opt-out fallback and move Spoon backlog to TODO doc